tests/ValidProofs/existsI.fitch
|P(c)
|---
|竏ベ.P(x) (竏オ) 1
