tests/InvalidRules/existsI%2.fitch
|P(c) ∧ Q(f(c))
|---
|∃x.P(x) ∧ Q(x) (∃I) 1
